

Änderungen
----------
v0.7.1 (??.05.2010)
 * It is possible to output all teams of a club.

v0.7.1 (18.05.2010)
 * DAM includes removed in team list and profile list

v0.7.0 (17.05.2010)
 * Saison-Selection: Sorting fixed
 * PlayerStatistics: Missing include fixed
 * LeagueTableAllTime: some deprecated calls removed
 * Pictures without DAM: zoom activated

v0.6.5 (11.05.2010) (not released)
 * #23: New marker ###MATCH_LEAGUETABLE### to show a leaguetable within a matchreport
 * All references to extension div removed
 * LeagueTable: support for php view removed
 * Compatibility for TYPO3 4.3 and PHP 5.3 improved
 * New static TS template to use T3sports without DAM
 * Dummy logo fixed in team

v0.6.2 (22.11.2009)
 * #15: League table fixed
 * #14: Limit in matchtable works now
 * #16: Fatal error in match crosstable
 * #17: New relation from stadium to tt_address
 * #18: Fix logos in club list

v0.6.1 (08.11.2009)
 * #11: tx_cfcleaguefe_models_competitions::getGroup() fixed

v0.6.0 (07.11.2009)
 * Bugfix for Task #3
 * View club list: New marker ###CLUBMAP### to show clubs in a GoogleMap. Extension wec_map required!

v0.5.6 (06.11.2009) (not released)
 * Player statistics supports agegroup in team
v0.5.5 (06.11.2009) (not released)
 * New view for club list
 * Markers changed for profile images from ###PROFILE_FIRST_PICTURE_IMGTAG### to ###PROFILE_FIRSTPICTURE###
 * To show all pictures of a profile use ###PROFILE_PICTURES###
 * Markers changed for match pictures. You have to use ###MATCH_PICTURES### and ###MATCH_FIRSTPICTURE### now.
 * Examples for image output with Lightbox 2 and Galleriffic
 * Competitions: It is now possible to add more then one age group to a competition
 * Teams: It is now possible to set an age group for a team

v0.5.4 (18.10.2009) (not released)
 * Some issues with pointsystem control fixed in league table
 * There is a new HTML-Template example in leaguetable.html to show TableScope-Controls as Select-Boxes.